--- a/tyche_web/html/index.html
+++ b/tyche_web/html/index.html
@@ -51,15 +51,15 @@
       </a>
       <a class="py-2 d-none d-md-inline-block" href="#">Accueil</a>
       <a class="py-2 d-none d-md-inline-block" href="#">Comparateur</a>
-      <a class="py-2 d-none d-md-inline-block" href="#">Nos offres</a>
+      <a class="py-2 d-none d-md-inline-block" href="#">Aide</a>
     </nav>
   </header>
 
   <main>
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-0 text-center bg-light">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 fw-normal"></h1>
-        <p class="lead fw-normal">Grâce à l'application Tyché devient un pro de la gestion de budget.</p>
+        <h1 class="display-4 fw-normal">Tyché</h1>
+        <p class="lead fw-normal">Grâce à notre application, comparer toutes ses charges devient un jeu d'enfant.</p>
         <!-- <a class="btn btn-outline-secondary" href="#">Découvrir</a> -->
 
       </div>
@@ -71,15 +71,16 @@
     <!--Insérer le carousel/ comparateur-->
     <div id="myCarousel" class="carousel slide" data-bs-interval="false" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <div data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="4" aria-label="Slide 5"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="5" aria-label="Slide 6"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="6" aria-label="Slide 7"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="7" aria-label="Slide 8"></div>
-        <div data-bs-target="#myCarousel" data-bs-slide-to="8" aria-label="Slide 9"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"
+          class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4" class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="4" aria-label="Slide 5" class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="5" aria-label="Slide 6" class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="6" aria-label="Slide 7" class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="7" aria-label="Slide 8" class="bi bi-circle"></div>
+        <div data-bs-target="#myCarousel" data-bs-slide-to="8" aria-label="Slide 9" class="bi bi-circle"></div>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" style="background-image: url('../assets/images/slide_4.png');">
@@ -132,7 +133,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item" style="background-image: url('../assets/images/slide_3.png');">
+        <div class="carousel-item" style="background-image: url('../assets/images/slide_5.png');">
           <div class="container-item">
             <h1>Achat de nourriture</h1>
             <p>Ce sont l'ensemble des dépenses liées au course et aux nécéssaire de vie</p>
@@ -152,7 +153,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item" style="background-image: url('../assets/images/slide_1.png');">
+        <div class="carousel-item" style="background-image: url('../assets/images/slide_6.png');">
           <div class="container-item">
             <h1>Loisir</h1>
             <p>Correspond aux dépense de loisir récurente</p>
@@ -162,7 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item" style="background-image: url('../assets/images/slide_5.png');">
+        <div class="carousel-item" style="background-image: url('../assets/images/slide_6.png');">
           <div class="container-item text-center">
             <h1>Verifier votre budget</h1>
             <p>Bien joué, vous êtes arrivé jusqu'au bout cliquez ci dessous pour analayser votre budget</p>
