Modif Html / Add Js

--- a/tyche_web/html/index.html
+++ b/tyche_web/html/index.html
@@ -89,7 +89,7 @@
             <p>La somme de toute vos rentrée d'argent par mois</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="salaire">
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
             <p>Indiquez ici le coût de votre loyer par mois</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="loyer">
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
             <p>Indiquez ici le prix de votre assurance habiation par mois</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="assurance_habitation">
             </div>
           </div>
         </div>
@@ -119,7 +119,7 @@
             <p>Renseigner ici le prix de votre assurance auto par mois</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="assurance_voiture">
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
             <p>Indiquez ici ce que vous dépensez en énergie par mois</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="electricite_gaz">
             </div>
           </div>
         </div>
@@ -139,7 +139,7 @@
             <p>Ce sont l'ensemble des dépenses liées au course et aux nécéssaire de vie</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="course_alimentaire">
             </div>
           </div>
         </div>
@@ -149,7 +149,7 @@
             <p>Correspond au coût de ton abonnement téléphonique et internet</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="abonnement">
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
             <p>Correspond aux dépense de loisir récurente</p>
             <div class="input-group mb-3">
               <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
+                aria-describedby="button-addon2" id="loisir">
             </div>
           </div>
         </div>
@@ -169,7 +169,7 @@
             <p>Bien joué, vous êtes arrivé jusqu'au bout cliquez ci dessous pour analayser votre budget</p>
             <a href="#">
               <div class="buttons">
-                <button class="blob-btn" href="#">
+                <button class="blob-btn" href="#" id="analyser">
                   Analyser
                   <span class="blob-btn__inner">
                     <span class="blob-btn__blobs">
@@ -308,6 +308,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
+      <script src="../js/index.js"></script>
   </main>
 </body>
 
