Modif Html / Modif Js

--- a/tyche_web/html/index.html
+++ b/tyche_web/html/index.html
@@ -58,8 +58,8 @@
   <main>
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-0 text-center bg-light">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 fw-normal">Tyché</h1>
-        <p class="lead fw-normal">Grâce à notre application, comparer toutes ses charges devient un jeu d'enfant.</p>
+        <h1 class="display-4 fw-normal">Grâce à Tyché</h1>
+        <p class="lead fw-normal">gérer son budget devient un jeu d'enfant.</p>
         <!-- <a class="btn btn-outline-secondary" href="#">Découvrir</a> -->
 
       </div>
@@ -87,80 +87,64 @@
           <div class="container-item">
             <h1>Salaire</h1>
             <p>La somme de toute vos rentrée d'argent par mois</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="salaire">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="salaire">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_1.png');">
           <div class="container-item">
             <h1>Loyer</h1>
             <p>Indiquez ici le coût de votre loyer par mois</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="loyer">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="loyer">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_2.png');">
           <div class="container-item">
             <h1>Assurance Habitation</h1>
             <p>Indiquez ici le prix de votre assurance habiation par mois</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="assurance_habitation">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="assurance_habitation">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_3.png');">
           <div class="container-item">
             <h1>Assurance Auto</h1>
             <p>Renseigner ici le prix de votre assurance auto par mois</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="assurance_voiture">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="assurance_voiture">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_4.png');">
           <div class="container-item">
             <h1>Electricité et Gaz</h1>
             <p>Indiquez ici ce que vous dépensez en énergie par mois</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="electricite_gaz">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="electricite_gaz">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_5.png');">
           <div class="container-item">
             <h1>Achat de nourriture</h1>
             <p>Ce sont l'ensemble des dépenses liées au course et aux nécéssaire de vie</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="course_alimentaire">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="course_alimentaire">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_6.png');">
           <div class="container-item">
             <h1>Téléphone et internet</h1>
             <p>Correspond au coût de ton abonnement téléphonique et internet</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="abonnement">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="abonnement">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_6.png');">
           <div class="container-item">
             <h1>Loisir</h1>
             <p>Correspond aux dépense de loisir récurente</p>
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="loisir">
-            </div>
+            <input type="number" class="form-control" placeholder="Le coût en €" aria-label="Recipient's username"
+              aria-describedby="button-addon2" id="loisir">
           </div>
         </div>
         <div class="carousel-item" style="background-image: url('../assets/images/slide_6.png');">
@@ -308,7 +292,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
-      <script src="../js/index.js"></script>
+    <script src="../js/index.js"></script>
   </main>
 </body>
 
