--- a/tyche_web/html/index.html
+++ b/tyche_web/html/index.html
@@ -51,7 +51,7 @@
       </a>
       <a class="py-2 d-none d-md-inline-block" href="#">Accueil</a>
       <a class="py-2 d-none d-md-inline-block" href="#">Comparateur</a>
-      <a class="py-2 d-none d-md-inline-block" href="#">Aide</a>
+      <a class="py-2 d-none d-md-inline-block" href="#">Nos Offres</a>
     </nav>
   </header>
 
@@ -60,7 +60,7 @@
       <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 fw-normal">Grâce à Tyché</h1>
         <p class="lead fw-normal">gérer son budget devient un jeu d'enfant.</p>
-        <!-- <a class="btn btn-outline-secondary" href="#">Découvrir</a> -->
+        <a class="btn btn-outline-secondary" href="#myCarousel">Découvrir</a>
 
       </div>
       <div class="product-device shadow-sm d-none d-md-block"></div>
@@ -68,7 +68,8 @@
     </div>
 
 
-    <!--Insérer le carousel/ comparateur-->
+    <!----------------------- Carousel ----------------------->
+
     <div id="myCarousel" class="carousel slide" data-bs-interval="false" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <div data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"
@@ -199,6 +200,15 @@
       </button>
     </div>
     </div>
+
+    <!----------------------- Carousel ----------------------->
+
+    <!----------------------- Section Offres ----------------------->
+    <section id="offres">
+
+    </section>
+    <!----------------------- Section Offres ----------------------->
+
 
     <!-----------------------Animation boutton----------------------->
 
