Modif titre animer

--- a/tyche_web/html/index.html
+++ b/tyche_web/html/index.html
@@ -60,42 +60,42 @@
 
     <div class="ecran position-relative overflow-hidden p-3 p-md-5 m-md-0 text-start">
       <div class="col-md-5 p-lg-5 mx-auto my-5 text-sm-center">
-        <h1 class="avantagegros display-4 fw-normal" id="titreAcceuil">
+        <h1 class="avantagegros display-4 fw-normal text-slide-right" id="titreAcceuil">
           Grâce à Flouze</h1>
-        <div class="container" style="height:100px;">
-          <div class="content">
-            <div class="content__container text-slide-right">
-              <p class="content__container__text">
-                Gère
-              </p>
-              <ul class="content__container__list">
-                <li class="content__container__list__item">ton argent !</li>
-                <li class="content__container__list__item">ton flouze !</li>
-                <li class="content__container__list__item">tes pesos !</li>
-                <li class="content__container__list__item">Gilles !</li>
-              </ul>
-            </div>
+
+        <div class="content">
+          <div class="content__container text-slide-right">
+            <p class="content__container__text">
+              Gère
+            </p>
+            <ul class="content__container__list">
+              <li class="content__container__list__item">ton argent !</li>
+              <li class="content__container__list__item">tes pesos !</li>
+              <li class="content__container__list__item">ton fric !</li>
+              <li class="content__container__list__item">tes ronds !</li>
+            </ul>
           </div>
         </div>
+
         <!-- <h1 class="text-slide-right avantagegros display-4 fw-normal" id="titreAcceuil">Gére ta thune !</h1>
         <p class="text-slide-right avantagepetit lead fw-normal">Grâce à notre application, gérer son budget devient un
           jeu d'enfant.</p> -->
-        <a href="#carousel">
-          <div class="element-fade-in-bottom buttons">
-            <button class="blob-btn" href="#carousel">
-              Découvrir
-              <span class="blob-btn__inner">
-                <span class="blob-btn__blobs">
-                  <span class="blob-btn__blob"></span>
-                  <span class="blob-btn__blob"></span>
-                  <span class="blob-btn__blob"></span>
-                  <span class="blob-btn__blob"></span>
-                </span>
+
+        <div class="element-fade-in-bottom buttons">
+          <button class="blob-btn" href="#carousel">
+            Découvrir
+            <span class="blob-btn__inner">
+              <span class="blob-btn__blobs">
+                <span class="blob-btn__blob"></span>
+                <span class="blob-btn__blob"></span>
+                <span class="blob-btn__blob"></span>
+                <span class="blob-btn__blob"></span>
               </span>
-            </button>
-            <br />
-          </div>
-        </a>
+            </span>
+          </button>
+          <br />
+        </div>
+
 
       </div>
       <div class="product-device shadow-sm d-none d-lg-block"></div>
